syntax = "proto3";

package filemetadata;

option go_package = "./filesystem/proto/master;filemetadata"; 

service FileMetadataService {
  rpc UploadFile(FileUploadReq) returns (UploadResp);
  rpc DownloadFile(FileDownloadReq) returns (DownloadResp);
  rpc DeleteFile(FileDeleteReq) returns (DeleteResp);
}

message ChunkServer {
    string address = 1;
}

message FileUploadReq {
  string file_id = 1;
  string user_id = 2;
  int64 size = 3; 
}

message UploadResp {
  string message = 1;
  bool success = 2;
  repeated ChunkServer chunk_servers = 3; 
  bytes access_token =  4;

}

message FileDownloadReq {
    string file_id = 1;
    string user_id = 2;
}

message DownloadResp {
    bool success = 1;
    repeated ChunkServer chunk_servers = 2; 
    bytes access_token = 3;
}

message FileDeleteReq {
    string file_id = 1;
    string user_id = 2;
}

message DeleteResp {
  bool success = 1;
    repeated ChunkServer chunk_servers = 2; 
    bytes access_token = 3;
}